--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,8 +1,11 @@
 name: Pipeline
 
 on:
-  - push
-  - pull_request
+  workflow_dispatch:
+
+  push:
+    paths-ignore:
+      - 'README.md'
 
 jobs:
   tests:
