--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -51,3 +51,23 @@ jobs:
           coveralls --finish --service=github
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  linter:
+    name: Linter '${{ matrix.tox_env }}'
+    strategy:
+      matrix:
+        tox_env:
+          - black
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v1
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.8
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install tox
+    - name: Test '${{ matrix.tox_env }}' with tox
+      run: tox -e ${{ matrix.tox_env }}
