--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py38, py39, py310
+envlist = black, py38, py39, py310
 
 [gh-actions]
 python =
@@ -14,3 +14,11 @@ commands =
     py.test \
         --cov-config .coveragerc --cov=controller --cov-report term \
         --cov-report xml --cov-report html {posargs}
+
+[testenv:black]
+basepython = python3.8
+skip_install = true
+deps =
+    black
+commands =
+    black --check --diff controller tests
