ci: enable bandit

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = black, py38, py39, py310
+envlist = bandit, black, py38, py39, py310
 
 [gh-actions]
 python =
@@ -16,9 +16,15 @@ commands =
         --cov-report xml --cov-report html {posargs}
 
 [testenv:black]
-basepython = python3.8
 skip_install = true
 deps =
     black
 commands =
     black --check --diff controller tests
+
+[testenv:bandit]
+skip_install = true
+deps =
+    bandit
+commands =
+    bandit -r controller
