--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -58,6 +58,7 @@ jobs:
       matrix:
         tox_env:
           - black
+          - bandit
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
