fix: gate passed FQDN in API layer

--- a/tox.ini
+++ b/tox.ini
@@ -13,7 +13,7 @@ deps =
 commands =
     py.test \
         --cov-config .coveragerc --cov=controller --cov-report term \
-        --cov-report xml --cov-report html {posargs}
+        --cov-report xml --cov-report html -v {posargs}
 
 [testenv:black]
 skip_install = true
