--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -60,6 +60,7 @@ jobs:
         tox_env:
           - black
           - bandit
+          - isort
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
