--- a/tox.ini
+++ b/tox.ini
@@ -28,3 +28,10 @@ deps =
     bandit
 commands =
     bandit -r controller
+
+[testenv:isort]
+skip_install = true
+deps =
+    isort
+commands =
+    isort . --check --diff
