--- a/tox.ini
+++ b/tox.ini
@@ -16,22 +16,25 @@ commands =
         --cov-report xml --cov-report html -v {posargs}
 
 [testenv:black]
+envdir={toxworkdir}/lint
 skip_install = true
-deps =
-    black
 commands =
     black --check --diff controller tests
 
 [testenv:bandit]
+envdir={toxworkdir}/lint
 skip_install = true
-deps =
-    bandit
 commands =
-    bandit -r controller
+    bandit -c pyproject.toml -r controller
 
 [testenv:isort]
+envdir={toxworkdir}/lint
 skip_install = true
-deps =
-    isort
 commands =
     isort . --check --diff
+
+[testenv:mypy]
+envdir={toxworkdir}/lint
+skip_install = true
+commands =
+    mypy .
